--- a/content/app.css
+++ b/content/app.css
@@ -20,9 +20,11 @@
     padding-right: 4px;
     border-right: 1px solid lightgray;
 }
-
+.subtype > .definitions-table {
+    font-size:0.9em;
+}
 .return-hdr {
-    margin-bottom:2px;
+    margin-bottom: 2px;
 }
 
 /*.controller-hdr {
