--- a/content/app.css
+++ b/content/app.css
@@ -1,7 +1,7 @@
-.required {
-    font-weight:bold;
+.parameters-list .param-name.required {
+    font-weight: bold;
 }
-.queryparameter {
+.parameters-list .param-name.queryparameter {
     font-style: italic;
 }
 
@@ -12,26 +12,16 @@
     padding: 0px;
 }
 
-/*.parameters-list {
-    margin-bottom: .5em;
-}*/
-
 .definitions-table tr td.property-name {
     padding-right: 4px;
     border-right: 1px solid lightgray;
 }
 .subtype > .definitions-table {
-    font-size:0.9em;
+    font-size:0.92em;
 }
 .return-hdr {
     margin-bottom: 2px;
 }
-
-/*.controller-hdr {
-    background-color: aliceblue;
-    border-bottom: 1px solid blue;
-    margin-top: 1em;
-}*/
 
 .controller-hdr .btn-link {
     font-size: inherit;
@@ -42,28 +32,23 @@
     padding-top: 0;
 }
 
-
 .paths .path.card-body {
 padding-top:0;padding-bottom:0.5rem;
 }
 
-.path-hdr {
-    
-}
 .loader-ph {
     text-align: center;
-    /*position: relative;*/
 }
 
-    .loader-ph > .loader {
-        border: 6px solid #e9ecef;
-        border-top: 6px solid #0062cc;
-        border-radius: 50%;
-        width: 2.5rem;
-        height: 2.5rem;
-        animation: spin 2s linear infinite;
-        display: inline-block;
-    }
+.loader-ph > .loader {
+    border: 6px solid #e9ecef;
+    border-top: 6px solid #0062cc;
+    border-radius: 50%;
+    width: 2.5rem;
+    height: 2.5rem;
+    animation: spin 2s linear infinite;
+    display: inline-block;
+}
 
 .definitions-hdr.collapsed {
     color: #e9ecef;
@@ -92,7 +77,3 @@ padding-top:0;padding-bottom:0.5rem;
 .returns {
     margin-bottom: 1em;
 }
-
-/*.definitions-table > tbody > td {
-    border: 1px solid lightgray;
-}*/
