--- a/content/app.css
+++ b/content/app.css
@@ -5,7 +5,11 @@
     font-style: italic;
 }
 
-.definitions-table tr {
+.definitions-table {
+    border-collapse: collapse;
+}
+
+.definitions-table tr, .definitions-table td {
     border: 1px solid lightgray;
 }
 .definitions-table tr td {
@@ -16,9 +20,41 @@
     padding-right: 4px;
     border-right: 1px solid lightgray;
 }
+
 .subtype > .definitions-table {
-    font-size:0.92em;
+    font-size: 0.92em;
 }
+
+@media print {
+    h1,h2,h3,h4,h5 {
+        page-break-inside:avoid;
+    }
+    .controller-hdr, .type-hdr, .path, .parameters, .returns {
+        page-break-before: auto;
+    }
+
+    .definitions-hdr {
+        page-break-before: always;
+    }
+
+    .definitions-table {
+        page-break-after: auto
+    }
+
+        .definitions-table tr, .definitions-table td {
+            page-break-inside: avoid;
+            page-break-after: auto
+        }
+
+    .definitions-table thead {
+        display: table-header-group
+    }
+
+    .definitions-table tfoot {
+        display: table-footer-group
+    }
+}
+
 .return-hdr {
     margin-bottom: 2px;
 }
