--- a/content/app.css
+++ b/content/app.css
@@ -40,6 +40,22 @@
     font-size: 0.92em;
 }
 
+
+.path-hdr.deprecated {
+    text-decoration: line-through;
+    color:dimgray;
+}
+
+.method.ispost {
+    background-color: lightgray;
+}
+
+.deprecated-text {
+    /*color: antiquewhite;*/
+    font-weight: bold;
+    /*background-color: black;*/
+}
+
 @media print {
     h1,h2,h3,h4,h5 {
         page-break-inside:avoid;
